<resources>

	<string name="app_name" translatable="false">Forlabs</string>

	<string name="title_schedule">Schedule</string>
	<string name="title_studies">Studies</string>
	<string name="title_settings">Settings</string>
	<string name="title_report">Report problem</string>

	<string name="hint_auth_email">E-mail Address</string>
	<string name="hint_auth_password">Password</string>
	<string name="hint_task_message">Response</string>
	<string name="hint_report_email">E-mail (unnecessary)</string>
	<string name="hint_report_title">Title</string>
	<string name="hint_report_message">Message</string>
	<string name="hint_report_message_unnecessary">Message (unnecessary)</string>

	<string name="dialog_update_available_title">New version %s available</string>
	<string name="dialog_update_available_positive">Download</string>
	<string name="dialog_update_available_negative">Later</string>


	<string name="error_auth_incorrect_credentials">Username and password do not match</string>

	<string name="item_semester_current">Current</string>

	<string name="button_refresh">Refresh</string>
	<string name="button_auth_log_in">Log In</string>
	<string name="button_auth_forgot_password">Forgot password?</string>
	<string name="button_study_exams_website">Go to website</string>
	<string name="button_task_attach">Attach file</string>
	<string name="button_task_send">Send</string>
	<string name="button_report_send">Send</string>

	<string name="check_report_stacktrace">Attach stack-trace</string>

	<string name="text_logout_wait">Please, wait…</string>
	<string name="text_dashboard_direction">Direction:</string>
	<string name="text_dashboard_profile">Profile:</string>
	<string name="text_dashboard_qualification">Qualification:</string>
	<string name="text_dashboard_form">Study form:</string>
	<string name="text_dashboard_year">Admission year:</string>
	<string name="text_dashboard_year_content" translatable="false">%d</string>
	<string name="text_dashboard_course">Current course:</string>
	<string name="text_dashboard_course_content">%d course</string>
	<string name="text_schedule_course">Course:</string>
	<string name="text_schedule_stream">Group:</string>
	<string name="text_schedule_week">Week:</string>
	<string name="text_score" translatable="false">%.2f</string>
	<string name="text_attendance" translatable="false">%d%%</string>
	<string name="text_study_overview_score">Score:</string>
	<string name="text_study_overview_attendance">Attendance:</string>
	<string name="text_study_overview_attendance_no">Not tracked</string>
	<string name="text_study_overview_status">Status:</string>
	<string name="text_study_overview_status_certified">Certified</string>
	<string name="text_study_overview_status_debt">Debt</string>
	<string name="text_study_overview_teacher">Teacher:</string>
	<string name="text_study_overview_schedule">Schedule</string>
	<string name="text_study_tasks_score" translatable="false">%.2f/%.2f</string>
	<string name="text_study_tasks_cost" translatable="false">-/%.2f</string>
	<string name="text_study_tasks_empty">No tasks</string>
	<string name="text_study_tasks_status_queued">Queued</string>
	<string name="text_study_tasks_status_current">Current</string>
	<string name="text_study_tasks_status_done">Done</string>
	<string name="text_study_tasks_status_sent">Sent for checking</string>
	<string name="text_study_tasks_status_accepted">Accepted</string>
	<string name="text_study_tasks_status_teacher_answered">Answered</string>
	<string name="text_study_tasks_status_teacher_questions">Questions</string>
	<string name="text_study_tasks_status_debt">Debt</string>
	<string name="text_study_exams_empty">Unimplemented</string>
	<string name="text_study_attendance_empty">Teacher does not log attendance</string>
	<string name="text_study_attendance_value">Attendance: %.1f%%</string>
	<string name="text_study_performance_empty">No marks</string>
	<string name="text_study_performance_score">Score: %.2f</string>
	<string name="text_task_title">Task #%d. %s</string>
	<string name="text_task_attachments">Attached files</string>
	<string name="text_task_attachment_size" translatable="false">%.2f %s</string>
	<string name="text_task_answer_empty">With that form you can send work you have done for teacher to check, attaching files if necessary.</string>
	<string name="text_report_crash">Looks like unexpected error has occurred in the application. Could you help us to resolve this issue?</string>
	<string name="text_report_crash_title">Application crash</string>

	<string name="item_dashboard">Dashboard</string>
	<string name="item_schedule">Schedule</string>
	<string name="item_studies">Studies</string>
	<string name="item_other">Other</string>
	<string name="item_other_settings">Settings</string>
	<string name="item_other_about">About</string>
	<string name="item_other_report">Report problem</string>
	<string name="item_other_logout">Log out</string>

	<string name="spinner_schedule_choose">Choose…</string>

	<string name="toast_report_success">Report has been sent. Thanks for your help!</string>

	<string name="shortcut_dashboard_long">Dashboard</string>
	<string name="shortcut_dashboard_short">Dashboard</string>
	<string name="shortcut_schedule_long">Schedule</string>
	<string name="shortcut_schedule_short">Schedule</string>
	<string name="shortcut_studies_long">My Studies</string>
	<string name="shortcut_studies_short">Studies</string>

	<string name="tab_study_overview">Overview</string>
	<string name="tab_study_tasks">Tasks></string>
	<string name="tab_study_exams">Exams</string>
	<string name="tab_study_attendance">Attendance</string>
	<string name="tab_study_performance">Performance</string>
	<string name="tab_task_description">Description</string>
	<string name="tab_task_answer">Answer</string>

	<string name="format_date" translatable="false">%d %s %d</string>
	<string name="format_date_time" translatable="false">%d %s %d %d:%d</string>

	<string name="pref_theme_title">Application theme</string>
	<string name="pref_theme_subtitle">Choose between light and dark theme</string>
	<string name="pref_default_title">Default section</string>
	<string name="pref_default_subtitle">Default section to open when app launches (does not affect shortcuts)</string>

	<string name="snack_schedule_index_empty">Unable to retrieve schedule</string>

	<string-array name="weeks">
		<item>Upper</item>
		<item>Lower</item>
	</string-array>

	<string-array name="days">
		<item>Monday</item>
		<item>Tuesday</item>
		<item>Wednesday</item>
		<item>Thursday</item>
		<item>Friday</item>
		<item>Saturday</item>
		<item>Sunday</item>
	</string-array>

	<string-array name="months">
		<item>of January</item>
		<item>of February</item>
		<item>of March</item>
		<item>of April</item>
		<item>of May</item>
		<item>of June</item>
		<item>of July</item>
		<item>of August</item>
		<item>of September</item>
		<item>of October</item>
		<item>of November</item>
		<item>of December</item>
	</string-array>

	<string-array name="file_size_units">
		<item>B</item>
		<item>KB</item>
		<item>MB</item>
	</string-array>

	<string-array name="pref_theme">
		<item>Follow system</item>
		<item>Auto</item>
		<item>Light</item>
		<item>Dark</item>
	</string-array>

	<string-array name="pref_default">
		<item>Dashboard</item>
		<item>Schedule</item>
		<item>Studies</item>
	</string-array>

</resources>
