<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".app.ReportActivity">

	<TextView
		android:id="@+id/text_crash"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginStart="20dp"
		android:layout_marginTop="16dp"
		android:layout_marginEnd="20dp"
		android:text="@string/text_report_crash"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent" />

	<com.google.android.material.textfield.TextInputLayout
		android:id="@+id/input_email"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginStart="16dp"
		android:layout_marginTop="16dp"
		android:layout_marginEnd="16dp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/text_crash">

		<com.google.android.material.textfield.TextInputEditText
			android:id="@+id/edit_email"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:hint="@string/hint_report_email"
			android:inputType="textEmailAddress"
			android:singleLine="true" />
	</com.google.android.material.textfield.TextInputLayout>

	<com.google.android.material.textfield.TextInputLayout
		android:id="@+id/input_title"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginStart="16dp"
		android:layout_marginEnd="16dp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/input_email">

		<com.google.android.material.textfield.TextInputEditText
			android:id="@+id/edit_title"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:hint="@string/hint_report_title"
			android:singleLine="true" />
	</com.google.android.material.textfield.TextInputLayout>

	<com.google.android.material.textfield.TextInputLayout
		android:id="@+id/input_message"
		android:layout_width="0dp"
		android:layout_height="0dp"
		android:layout_marginStart="16dp"
		android:layout_marginEnd="16dp"
		app:layout_constraintBottom_toTopOf="@+id/check_stacktrace"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/input_title">

		<com.google.android.material.textfield.TextInputEditText
			android:id="@+id/edit_message"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			tools:hint="@string/hint_report_message" />
	</com.google.android.material.textfield.TextInputLayout>

	<CheckBox
		android:id="@+id/check_stacktrace"
		android:layout_width="0dp"
		android:layout_height="0dp"
		android:layout_marginStart="16dp"
		android:layout_marginEnd="8dp"
		android:enabled="false"
		android:text="@string/check_report_stacktrace"
		app:layout_constraintBottom_toBottomOf="@+id/button_send"
		app:layout_constraintEnd_toStartOf="@+id/button_send"
		app:layout_constraintHorizontal_bias="0.5"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="@+id/button_send" />

	<Button
		android:id="@+id/button_send"
		style="@style/Widget.AppCompat.Button.Colored"
		android:layout_width="128dp"
		android:layout_height="wrap_content"
		android:layout_marginEnd="16dp"
		android:layout_marginBottom="16dp"
		android:background="@drawable/background_button_accent"
		android:text="@string/button_report_send"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>