<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".app.MainActivity">

	<com.google.android.material.appbar.AppBarLayout
		android:layout_width="match_parent"
		android:layout_height="?attr/actionBarSize">

		<androidx.appcompat.widget.Toolbar
			android:id="@+id/toolbar"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			app:navigationIcon="@drawable/ic_menu_daynight_24dp"
			app:title="@string/app_name" />

	</com.google.android.material.appbar.AppBarLayout>

	<androidx.core.widget.NestedScrollView
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		app:layout_behavior="@string/appbar_scrolling_view_behavior">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical">

			<androidx.cardview.widget.CardView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_margin="16dp"
				app:cardCornerRadius="8dp"
				app:cardUseCompatPadding="true">

				<LinearLayout
					android:id="@+id/table_dashboard"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:orientation="vertical"
					android:padding="8dp">

					<LinearLayout
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:layout_marginTop="8dp"
						android:padding="8dp">

						<TextView
							android:layout_width="128dp"
							android:layout_height="wrap_content"
							android:layout_marginEnd="4dp"
							android:text="@string/text_dashboard_direction" />

						<TextView
							android:id="@+id/text_direction"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:layout_marginStart="4dp"
							android:textColor="?android:attr/textColorPrimary"
							tools:text="Дворник" />

					</LinearLayout>

					<LinearLayout
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:padding="8dp">

						<TextView
							android:layout_width="128dp"
							android:layout_height="wrap_content"
							android:layout_marginEnd="4dp"
							android:text="@string/text_dashboard_profile" />

						<TextView
							android:id="@+id/text_profile"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:layout_marginStart="4dp"
							android:textColor="?android:attr/textColorPrimary"
							tools:text="Дворник" />

					</LinearLayout>

					<LinearLayout
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:padding="8dp">

						<TextView
							android:layout_width="128dp"
							android:layout_height="wrap_content"
							android:layout_marginEnd="4dp"
							android:text="@string/text_dashboard_qualification" />

						<TextView
							android:id="@+id/text_qualification"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:layout_marginStart="4dp"
							android:textColor="?android:attr/textColorPrimary"
							tools:text="Дворник" />

					</LinearLayout>

					<LinearLayout
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:padding="8dp">

						<TextView
							android:layout_width="128dp"
							android:layout_height="wrap_content"
							android:layout_marginEnd="4dp"
							android:text="@string/text_dashboard_form" />

						<TextView
							android:id="@+id/text_form"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:layout_marginStart="4dp"
							android:textColor="?android:attr/textColorPrimary"
							tools:text="Дворник" />

					</LinearLayout>

					<LinearLayout
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:padding="8dp">

						<TextView
							android:layout_width="128dp"
							android:layout_height="wrap_content"
							android:layout_marginEnd="4dp"
							android:text="@string/text_dashboard_year" />

						<TextView
							android:id="@+id/text_year"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:layout_marginStart="4dp"
							android:textColor="?android:attr/textColorPrimary"
							tools:text="Дворник" />

					</LinearLayout>

					<LinearLayout
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:padding="8dp">

						<TextView
							android:layout_width="128dp"
							android:layout_height="wrap_content"
							android:layout_marginEnd="4dp"
							android:text="@string/text_dashboard_course" />


						<TextView
							android:id="@+id/text_course"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:layout_marginStart="4dp"
							android:layout_marginEnd="8dp"
							android:textColor="?android:attr/textColorPrimary"
							tools:text="Дворник" />

						<ProgressBar
							android:id="@+id/progress_course"
							style="@style/Widget.AppCompat.ProgressBar.Horizontal"
							android:layout_width="0dp"
							android:layout_height="wrap_content"
							android:layout_gravity="bottom"
							android:layout_weight="1" />

					</LinearLayout>

				</LinearLayout>

			</androidx.cardview.widget.CardView>

		</LinearLayout>

	</androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>