<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:animateLayoutChanges="true"
	tools:background="@color/accent"
	tools:context=".app.AuthActivity">

	<ImageView
		android:id="@+id/image_logo"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:src="@drawable/ic_launcher_foreground"
		app:layout_constraintBottom_toTopOf="@+id/input_email"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.5"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintVertical_chainStyle="packed"
		tools:ignore="ContentDescription" />

	<com.google.android.material.textfield.TextInputLayout
		android:id="@+id/input_email"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginStart="8dp"
		android:layout_marginEnd="8dp"
		android:visibility="gone"
		app:layout_constraintBottom_toTopOf="@+id/input_password"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/image_logo"
		tools:visibility="visible">

		<com.google.android.material.textfield.TextInputEditText
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:hint="@string/hint_auth_email"
			android:importantForAutofill="yes"
			android:inputType="textEmailAddress"
			tools:ignore="UnusedAttribute" />
	</com.google.android.material.textfield.TextInputLayout>

	<com.google.android.material.textfield.TextInputLayout
		android:id="@+id/input_password"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginStart="8dp"
		android:layout_marginEnd="8dp"
		android:visibility="gone"
		app:layout_constraintBottom_toTopOf="@+id/button_log_in"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/input_email"
		tools:visibility="visible">

		<com.google.android.material.textfield.TextInputEditText
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:hint="@string/hint_auth_password"
			android:importantForAutofill="yes"
			android:inputType="textPassword"
			tools:ignore="UnusedAttribute" />
	</com.google.android.material.textfield.TextInputLayout>

	<Button
		android:id="@+id/button_log_in"
		style="@style/Widget.AppCompat.Button.Colored"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginEnd="8dp"
		android:text="@string/button_auth_log_in"
		android:visibility="gone"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/input_password"
		tools:visibility="visible" />

	<Button
		android:id="@+id/button_forgot_password"
		style="@style/Widget.AppCompat.Button.Borderless.Colored"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginEnd="8dp"
		android:text="@string/button_auth_forgot_password"
		android:visibility="gone"
		app:layout_constraintBaseline_toBaselineOf="@+id/button_log_in"
		app:layout_constraintEnd_toStartOf="@+id/button_log_in"
		tools:visibility="visible" />

	<ProgressBar
		android:id="@+id/progress"
		style="?android:attr/progressBarStyle"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:visibility="gone"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="@+id/input_email" />

</androidx.constraintlayout.widget.ConstraintLayout>