<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:layout_marginBottom="8dp"
	app:cardCornerRadius="8dp"
	app:cardUseCompatPadding="true"
	tools:layout_margin="16dp">

	<androidx.constraintlayout.widget.ConstraintLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content">

		<androidx.constraintlayout.widget.Guideline
			android:id="@+id/guideline"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			app:layout_constraintGuide_percent="0.381966011" />

		<TextView
			android:id="@+id/text_course"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginStart="16dp"
			android:layout_marginEnd="8dp"
			android:text="@string/text_schedule_course"
			android:textColor="?android:attr/textColorPrimary"
			app:layout_constraintBottom_toBottomOf="@+id/spinner_course"
			app:layout_constraintEnd_toStartOf="@+id/guideline"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="@+id/spinner_course" />

		<Spinner
			android:id="@+id/spinner_course"
			android:layout_width="0dp"
			android:layout_height="48dp"
			android:layout_marginStart="8dp"
			android:layout_marginTop="8dp"
			android:layout_marginEnd="8dp"
			app:layout_constraintBottom_toTopOf="@+id/spinner_stream"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintHorizontal_bias="0.5"
			app:layout_constraintStart_toStartOf="@+id/guideline"
			app:layout_constraintTop_toTopOf="parent"
			tools:entries="@array/weeks" />

		<TextView
			android:id="@+id/text_stream"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginStart="16dp"
			android:layout_marginEnd="8dp"
			android:text="@string/text_schedule_stream"
			android:textColor="?android:attr/textColorPrimary"
			android:textSize="14sp"
			app:layout_constraintBottom_toBottomOf="@+id/spinner_stream"
			app:layout_constraintEnd_toStartOf="@+id/guideline"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="@+id/spinner_stream" />

		<Spinner
			android:id="@+id/spinner_stream"
			android:layout_width="0dp"
			android:layout_height="48dp"
			android:layout_marginStart="8dp"
			android:layout_marginEnd="8dp"
			app:layout_constraintBottom_toTopOf="@+id/spinner_week"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintHorizontal_bias="0.5"
			app:layout_constraintStart_toStartOf="@+id/guideline"
			app:layout_constraintTop_toBottomOf="@+id/spinner_course"
			tools:entries="@array/weeks" />

		<TextView
			android:id="@+id/text_week"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginStart="16dp"
			android:layout_marginEnd="8dp"
			android:text="@string/text_schedule_week"
			android:textColor="?android:attr/textColorPrimary"
			app:layout_constraintBottom_toBottomOf="@+id/spinner_week"
			app:layout_constraintEnd_toStartOf="@+id/guideline"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="@+id/spinner_week" />

		<Spinner
			android:id="@+id/spinner_week"
			android:layout_width="0dp"
			android:layout_height="48dp"
			android:layout_marginStart="8dp"
			android:layout_marginEnd="8dp"
			android:layout_marginBottom="8dp"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintHorizontal_bias="0.5"
			app:layout_constraintStart_toStartOf="@+id/guideline"
			app:layout_constraintTop_toBottomOf="@+id/spinner_stream"
			tools:entries="@array/weeks" />

	</androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>