<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:clipToPadding="false"
	android:padding="16dp">

	<androidx.cardview.widget.CardView
		android:id="@+id/card_overview"
		android:layout_width="@dimen/card_width"
		android:layout_height="wrap_content"
		android:layout_gravity="center_horizontal"
		android:visibility="gone"
		app:cardCornerRadius="8dp"
		app:cardUseCompatPadding="true">

		<androidx.constraintlayout.widget.ConstraintLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content">

			<androidx.constraintlayout.widget.Guideline
				android:id="@+id/guideline"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:orientation="vertical"
				app:layout_constraintGuide_percent="0.381966011" />

			<TextView
				android:id="@+id/text_score_title"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_marginStart="16dp"
				android:layout_marginTop="16dp"
				android:layout_marginEnd="8dp"
				android:layout_marginBottom="8dp"
				android:text="@string/text_study_overview_score"
				app:layout_constraintBottom_toTopOf="@+id/text_attendance_title"
				app:layout_constraintEnd_toStartOf="@+id/guideline"
				app:layout_constraintHorizontal_bias="0.5"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toTopOf="parent"
				app:layout_constraintVertical_chainStyle="packed" />

			<TextView
				android:id="@+id/text_score"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_marginStart="8dp"
				android:layout_marginEnd="16dp"
				android:textColor="?android:attr/textColorPrimary"
				app:layout_constraintBaseline_toBaselineOf="@+id/text_score_title"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="@+id/guideline"
				tools:text="-69" />

			<TextView
				android:id="@+id/text_attendance_title"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_marginStart="16dp"
				android:layout_marginTop="8dp"
				android:layout_marginEnd="8dp"
				android:layout_marginBottom="8dp"
				android:text="@string/text_study_overview_attendance"
				app:layout_constraintBottom_toTopOf="@+id/text_status_title"
				app:layout_constraintEnd_toStartOf="@+id/guideline"
				app:layout_constraintHorizontal_bias="0.5"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@+id/text_score_title" />

			<ProgressBar
				android:id="@+id/progress_attendance"
				style="?android:attr/progressBarStyleHorizontal"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_marginStart="8dp"
				android:layout_marginEnd="16dp"
				app:layout_constraintBottom_toBottomOf="@+id/text_attendance_title"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toEndOf="@+id/text_attendance"
				app:layout_constraintTop_toTopOf="@+id/text_attendance_title"
				tools:max="100"
				tools:progress="69" />

			<TextView
				android:id="@+id/text_attendance"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginStart="8dp"
				android:textColor="?android:attr/textColorPrimary"
				app:layout_constraintBaseline_toBaselineOf="@+id/text_attendance_title"
				app:layout_constraintStart_toStartOf="@+id/guideline"
				tools:text="69%" />

			<TextView
				android:id="@+id/text_status_title"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_marginStart="16dp"
				android:layout_marginTop="8dp"
				android:layout_marginEnd="8dp"
				android:layout_marginBottom="8dp"
				android:text="@string/text_study_overview_status"
				app:layout_constraintBottom_toTopOf="@+id/text_teacher_title"
				app:layout_constraintEnd_toStartOf="@+id/guideline"
				app:layout_constraintHorizontal_bias="0.5"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@+id/text_attendance_title" />

			<TextView
				android:id="@+id/text_status"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_marginStart="8dp"
				android:layout_marginEnd="8dp"
				android:textColor="?android:attr/textColorPrimary"
				app:layout_constraintBaseline_toBaselineOf="@+id/text_status_title"
				app:layout_constraintEnd_toStartOf="@+id/image_status"
				app:layout_constraintStart_toStartOf="@+id/guideline"
				tools:text="отчислен(о)" />

			<ImageView
				android:id="@+id/image_status"
				android:layout_width="24dp"
				android:layout_height="24dp"
				android:layout_marginEnd="16dp"
				app:layout_constraintBottom_toBottomOf="@+id/text_status"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintTop_toTopOf="@+id/text_status"
				tools:ignore="ContentDescription"
				tools:src="@drawable/ic_warning_24dp" />

			<TextView
				android:id="@+id/text_teacher_title"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_marginStart="16dp"
				android:layout_marginTop="8dp"
				android:layout_marginEnd="8dp"
				android:layout_marginBottom="16dp"
				android:text="@string/text_study_overview_teacher"
				app:layout_constraintBottom_toBottomOf="parent"
				app:layout_constraintEnd_toStartOf="@+id/guideline"
				app:layout_constraintHorizontal_bias="0.5"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@+id/text_status_title" />

			<TextView
				android:id="@+id/text_teacher"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_marginStart="8dp"
				android:layout_marginEnd="16dp"
				android:textColor="?android:attr/textColorPrimary"
				app:layout_constraintBaseline_toBaselineOf="@+id/text_teacher_title"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="@+id/guideline"
				tools:text="Чуева С. Ю." />

		</androidx.constraintlayout.widget.ConstraintLayout>

	</androidx.cardview.widget.CardView>

</androidx.core.widget.NestedScrollView>